--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -4,18 +4,18 @@ on: [push, pull_request]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac
+        uses: actions/checkout@v6
 
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@0ab4596768b603586c0de567f2430c30f5b0d2b0
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          java-version: 8
-          distribution: temurin
+          java-version: '17'
+          distribution: 'temurin'
+          cache: 'maven'
 
       - name: Build with Maven
-        run: mvn package --file pom.xml
+        run: mvn -B package --file pom.xml
