--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,6 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.release>17</maven.compiler.release>
         <skipTests>true</skipTests> <!-- Haven't written the tests yet -->
-        <argLine></argLine>
     </properties>
 
     <licenses>
@@ -149,7 +148,8 @@
                 <extensions>true</extensions>
                 <configuration>
                     <publishingServerId>central</publishingServerId> <!-- id in settings.xml -->
-                    <autoPublish>false</autoPublish> <!-- Set to true to automatically publish after validation passes -->
+                    <autoPublish>false
+                    </autoPublish> <!-- Set to true to automatically publish after validation passes -->
                     <deploymentName>${project.groupId}:${project.artifactId}:${project.version}</deploymentName>
                 </configuration>
             </plugin>
